Fixed alignment of log in button. Create setAuction in AuctionView

--- a/DAT250-auction/web/resources/css/frontPage.css
+++ b/DAT250-auction/web/resources/css/frontPage.css
@@ -56,8 +56,8 @@ body{
 }
 
 .buttonLogin{
-    justify-content: flex-end;
-    margin-top: 15vh;
+    margin-left: auto;
+    align-self: center;
 }
 
 .auction-header {
